--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
+
 # Distribution / packaging
 .Python
 build/
@@ -126,3 +127,6 @@ dmypy.json
 .idea/*
 cert/
 assets/
+
+firebasecert.json
+storeconfig.py
